tests/fixtures/invalid/none_rshift_float.py
# Cannot right shift None and Float
x: float = None >> 1.0
